--- a/examples/example_js_global.html
+++ b/examples/example_js_global.html
@@ -2,12 +2,12 @@
 
 <html>
   <head>
-    <title>secrets.js - HTML w/ JS Global Test</title>
+    <title>secret-sharing.js - HTML w/ JS Global Test</title>
   </head>
 
   <body>
 
-    <h1>secrets.js</h1>
+    <h1>secret-sharing.js</h1>
     <p>You can also open a javascript console to interact directly with the 'secrets' global.</p>
 
     <h2>The following code is being run:</h2>
@@ -60,7 +60,7 @@
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/randomorg-js/dist/randomorg-js.js"></script>
     <script src="../node_modules/sjcl/sjcl.js"></script>
-    <script src="../secrets.js"></script>
+    <script src="../secret-sharing.js"></script>
 
     <script charset="utf-8">
       var key, comb1, comb2, shares, newShare;
