concatenated sjcl.js to build

--- a/examples/example_js_global.html
+++ b/examples/example_js_global.html
@@ -60,7 +60,7 @@
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/randomorg-js/dist/randomorg-js.js"></script>
     <script src="../node_modules/sjcl/sjcl.js"></script>
-    <script src="../secret-sharing.js"></script>
+    <script src="../build/secret-sharing.ob.js"></script>
 
     <script charset="utf-8">
       var key, comb1, comb2, shares, newShare;
