removed sjcl.js instructions

--- a/benchmark/benchmark.html
+++ b/benchmark/benchmark.html
@@ -9,8 +9,7 @@
   <script src="../node_modules/platform/platform.js"></script>
   <script src="../node_modules/benchmark/benchmark.js"></script>
 
-  <script src="https://cdn.rawgit.com/bitwiseshiftleft/sjcl/4fc74ff9/sjcl.js"></script>
-  <script src="../build/secret-sharing.js"></script>
+  <script src="../build/secret-sharing.min.js"></script>
 
   <script charset="utf-8">
     var suite = new Benchmark.Suite;
@@ -29,8 +28,6 @@
         console.log(String(event.target));
       })
       .on('complete', function () {
-        var tes = this.filter('fastest');
-        debugger;
         console.log('Fastest is ' + this.filter('fastest').map('name'));
       })
       // run async
